# Grapes

./: .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE  License.txt  README.md  cmake.sh
.github/workflows/: cmake.yml
include/: CMakeLists.txt  GrapesConf.h.in  NScanner.h  Parser.h  Scanner.h
src/: CMakeLists.txt  NScanner.cpp  Parser.cpp  Scanner.cpp  main.cpp
svm/: CMakeLists.txt  ExecutionEngine.cpp  Program.cpp  Value.cpp
svm/include/: ExecutionEngine.h  Program.h  Value.h
test/: Test.gs
tools/: ClassGen  ClassGen.cpp
